Melhora no visual do site

--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  text-decoration: none;
+  color: inherit;
 }
 
 body {
@@ -261,13 +263,13 @@ footer {
   content: "";
   position: absolute;
   inset: 0;
-  background-color: rgba(255, 153, 0, 0);
+  background-color: rgba(211, 179, 78, 0);
   transition: background-color 0.3s ease;
   z-index: 1;
 }
 
 .quadro:hover::before {
-  background-color: rgba(255, 153, 0, 0.7);
+  background-color: rgba(211, 179, 78, 0.7);
 }
 
 /* Título fixo na parte de baixo, sobe no hover */
@@ -275,7 +277,7 @@ footer {
   position: absolute;
   bottom: 0;
   width: 100%;
-  background-color: #ff9900;
+  background-color: #ffc270;
   color: white;
   text-align: center;
   padding: 10px 0;
@@ -313,6 +315,8 @@ footer {
   width: 100%;
   height: 300px;
   overflow: hidden;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+
 }
 
 .img-banner-topo {
