--- a/views/obras-model.html
+++ b/views/obras-model.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>EletroGe</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="../public/style.css" />
   <link
           rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
@@ -13,7 +13,7 @@
 <body>
 <header>
   <a href="index.html">
-    <img src="img/logo-eletroge.png" alt="Logo EletroGe" class="logo" />
+    <img src="../public/img/logo-eletroge.png" alt="Logo EletroGe" class="logo" />
   </a>
   <nav>
     <a href="index.html"><i class="fas fa-home"></i> Início</a>
@@ -22,7 +22,7 @@
   </nav>
 </header>
 <section class="banner-topo">
-  <img src="img/img-principal.jpg" alt="Banner de topo" class="img-banner-topo" />
+  <img src="../public/img/img-principal.jpg" alt="Banner de topo" class="img-banner-topo" />
   <div class="texto-banner-topo">
     <h1><strong>Nosso Repertório no Ramo Industrial</strong></h1>
   </div>
@@ -36,73 +36,73 @@
     <!-- 16 quadrados com imagem de fundo e texto -->
     <!-- Substitua 'img/bg.jpg' pelas imagens reais -->
     <!-- Linha 1 -->
-    <div class="quadro" style="background-image: url('img/bg.jpg');">
+    <div class="quadro" style="background-image: url('public/img/bg.jpg');">
       <div class="quadro-banner">Título</div>
       <div class="quadro-hover-text">Descrição menor aqui</div>
     </div>
-    <div class="quadro" style="background-image: url('img/bg.jpg');">
+    <div class="quadro" style="background-image: url('public/img/bg.jpg');">
       <div class="quadro-banner">Título</div>
       <div class="quadro-hover-text">Descrição menor aqui</div>
     </div>
-    <div class="quadro" style="background-image: url('img/bg.jpg');">
+    <div class="quadro" style="background-image: url('public/img/bg.jpg');">
       <div class="quadro-banner">Título</div>
       <div class="quadro-hover-text">Descrição menor aqui</div>
     </div>
-    <div class="quadro" style="background-image: url('img/bg.jpg');">
+    <div class="quadro" style="background-image: url('public/img/bg.jpg');">
       <div class="quadro-banner">Título</div>
       <div class="quadro-hover-text">Descrição menor aqui</div>
     </div>
 
     <!-- Linha 2 -->
-    <div class="quadro" style="background-image: url('img/bg.jpg');">
+    <div class="quadro" style="background-image: url('public/img/bg.jpg');">
       <div class="quadro-banner">Título</div>
       <div class="quadro-hover-text">Descrição menor aqui</div>
     </div>
-    <div class="quadro" style="background-image: url('img/bg.jpg');">
+    <div class="quadro" style="background-image: url('public/img/bg.jpg');">
       <div class="quadro-banner">Título</div>
       <div class="quadro-hover-text">Descrição menor aqui</div>
     </div>
-    <div class="quadro" style="background-image: url('img/bg.jpg');">
+    <div class="quadro" style="background-image: url('public/img/bg.jpg');">
       <div class="quadro-banner">Título</div>
       <div class="quadro-hover-text">Descrição menor aqui</div>
     </div>
-    <div class="quadro" style="background-image: url('img/bg.jpg');">
+    <div class="quadro" style="background-image: url('public/img/bg.jpg');">
       <div class="quadro-banner">Título</div>
       <div class="quadro-hover-text">Descrição menor aqui</div>
     </div>
 
     <!-- Linha 3 -->
-    <div class="quadro" style="background-image: url('img/bg.jpg');">
+    <div class="quadro" style="background-image: url('public/img/bg.jpg');">
       <div class="quadro-banner">Título</div>
       <div class="quadro-hover-text">Descrição menor aqui</div>
     </div>
-    <div class="quadro" style="background-image: url('img/bg.jpg');">
+    <div class="quadro" style="background-image: url('public/img/bg.jpg');">
       <div class="quadro-banner">Título</div>
       <div class="quadro-hover-text">Descrição menor aqui</div>
     </div>
-    <div class="quadro" style="background-image: url('img/bg.jpg');">
+    <div class="quadro" style="background-image: url('public/img/bg.jpg');">
       <div class="quadro-banner">Título</div>
       <div class="quadro-hover-text">Descrição menor aqui</div>
     </div>
-    <div class="quadro" style="background-image: url('img/bg.jpg');">
+    <div class="quadro" style="background-image: url('public/img/bg.jpg');">
       <div class="quadro-banner">Título</div>
       <div class="quadro-hover-text">Descrição menor aqui</div>
     </div>
 
     <!-- Linha 4 -->
-    <div class="quadro" style="background-image: url('img/bg.jpg');">
+    <div class="quadro" style="background-image: url('public/img/bg.jpg');">
       <div class="quadro-banner">Título</div>
       <div class="quadro-hover-text">Descrição menor aqui</div>
     </div>
-    <div class="quadro" style="background-image: url('img/bg.jpg');">
+    <div class="quadro" style="background-image: url('public/img/bg.jpg');">
       <div class="quadro-banner">Título</div>
       <div class="quadro-hover-text">Descrição menor aqui</div>
     </div>
-    <div class="quadro" style="background-image: url('img/bg.jpg');">
+    <div class="quadro" style="background-image: url('public/img/bg.jpg');">
       <div class="quadro-banner">Título</div>
       <div class="quadro-hover-text">Descrição menor aqui</div>
     </div>
-    <div class="quadro" style="background-image: url('img/bg.jpg');">
+    <div class="quadro" style="background-image: url('public/img/bg.jpg');">
       <div class="quadro-banner">Título</div>
       <div class="quadro-hover-text">Descrição menor aqui</div>
     </div>
@@ -121,7 +121,7 @@
   </div>
   <div class="footer-section footer-white">
     <img
-            src="img/logo-eletroge.png"
+            src="../public/img/logo-eletroge.png"
             alt="Logo EletroGe"
             class="img-eletroge-rodape"
     />
