Estilização dos cards das obras-model.html

--- a/public/views/obras-model.html
+++ b/public/views/obras-model.html
@@ -24,91 +24,31 @@
 <section class="banner-topo">
   <img src="../img/img-principal.jpg" alt="Banner de topo" class="img-banner-topo" />
   <div class="texto-banner-topo">
-    <h1><strong>Nosso Repertório no Ramo Industrial</strong></h1>
+    <h1><strong>Conheça as Nossas Principais Obras</strong></h1>
   </div>
 </section>
 
 
-<!-- NOVA SEÇÃO COM 16 QUADRADOS -->
 <section class="quadros-wrapper">
   <h1>Obras já concluídas</h1>
   <div class="grade-quadros">
-    <!-- 16 quadrados com imagem de fundo e texto -->
-    <!-- Substitua 'img/bg.jpg' pelas imagens reais -->
-    <!-- Linha 1 -->
-    <div class="quadro" style="background-image: url('public/img/bg.jpg');">
-      <div class="quadro-banner">Título</div>
-      <div class="quadro-hover-text">Descrição menor aqui</div>
-    </div>
-    <div class="quadro" style="background-image: url('public/img/bg.jpg');">
-      <div class="quadro-banner">Título</div>
-      <div class="quadro-hover-text">Descrição menor aqui</div>
-    </div>
-    <div class="quadro" style="background-image: url('public/img/bg.jpg');">
-      <div class="quadro-banner">Título</div>
-      <div class="quadro-hover-text">Descrição menor aqui</div>
-    </div>
-    <div class="quadro" style="background-image: url('public/img/bg.jpg');">
-      <div class="quadro-banner">Título</div>
-      <div class="quadro-hover-text">Descrição menor aqui</div>
-    </div>
+    <div class="card-obras">
+      <div class="imagem-bg-obra" style="background-image: url('../img/instalcao-spda.jpeg')"></div>
+      <div class="info-quadros">
+        <a href="#">
+          <span class="titulo-quadro-obra">Teste nome da obra </span>
+        </a>
 
-    <!-- Linha 2 -->
-    <div class="quadro" style="background-image: url('public/img/bg.jpg');">
-      <div class="quadro-banner">Título</div>
-      <div class="quadro-hover-text">Descrição menor aqui</div>
-    </div>
-    <div class="quadro" style="background-image: url('public/img/bg.jpg');">
-      <div class="quadro-banner">Título</div>
-      <div class="quadro-hover-text">Descrição menor aqui</div>
-    </div>
-    <div class="quadro" style="background-image: url('public/img/bg.jpg');">
-      <div class="quadro-banner">Título</div>
-      <div class="quadro-hover-text">Descrição menor aqui</div>
-    </div>
-    <div class="quadro" style="background-image: url('public/img/bg.jpg');">
-      <div class="quadro-banner">Título</div>
-      <div class="quadro-hover-text">Descrição menor aqui</div>
-    </div>
+        <p class="desc-quadro-obra">Teste da descrição da obra</p>
 
-    <!-- Linha 3 -->
-    <div class="quadro" style="background-image: url('public/img/bg.jpg');">
-      <div class="quadro-banner">Título</div>
-      <div class="quadro-hover-text">Descrição menor aqui</div>
-    </div>
-    <div class="quadro" style="background-image: url('public/img/bg.jpg');">
-      <div class="quadro-banner">Título</div>
-      <div class="quadro-hover-text">Descrição menor aqui</div>
-    </div>
-    <div class="quadro" style="background-image: url('public/img/bg.jpg');">
-      <div class="quadro-banner">Título</div>
-      <div class="quadro-hover-text">Descrição menor aqui</div>
-    </div>
-    <div class="quadro" style="background-image: url('public/img/bg.jpg');">
-      <div class="quadro-banner">Título</div>
-      <div class="quadro-hover-text">Descrição menor aqui</div>
-    </div>
-
-    <!-- Linha 4 -->
-    <div class="quadro" style="background-image: url('public/img/bg.jpg');">
-      <div class="quadro-banner">Título</div>
-      <div class="quadro-hover-text">Descrição menor aqui</div>
-    </div>
-    <div class="quadro" style="background-image: url('public/img/bg.jpg');">
-      <div class="quadro-banner">Título</div>
-      <div class="quadro-hover-text">Descrição menor aqui</div>
-    </div>
-    <div class="quadro" style="background-image: url('public/img/bg.jpg');">
-      <div class="quadro-banner">Título</div>
-      <div class="quadro-hover-text">Descrição menor aqui</div>
-    </div>
-    <div class="quadro" style="background-image: url('public/img/bg.jpg');">
-      <div class="quadro-banner">Título</div>
-      <div class="quadro-hover-text">Descrição menor aqui</div>
+        <a class="action" href="#">
+          Veja mais
+          <span aria-hidden="true"> → </span>
+        </a>
+      </div>
     </div>
   </div>
 </section>
-
 <!-- Rodapé -->
 <footer>
   <div class="footer-section footer-yellow-light">
