--- a/public/style.css
+++ b/public/style.css
@@ -226,35 +226,70 @@ footer {
 }
 
 
-
-.img-banner-topo {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  display: block;
-}
-
-.texto-banner-topo {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: white;
-  text-align: center;
-  z-index: 2;
-  text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.6);
-}
-
-.texto-banner-topo h1 {
-  font-size: 2.8rem;
-  font-weight: bold;
-}
 .obras-andamento {
   background-color: #eee;
   color: #333;
   text-align: center;
   padding: 60px 20px;
 }
+.stardart-line{
+  width: 75%;
+  box-shadow: 0 6px 12px rgba(0, 0, 5, 0.1);
+  margin: 20px auto;
+  text-decoration: none;
+}
+
+/*Estilização do Radio Button*/
+:focus{
+  outline: 0;
+  border-color: #cc9900;
+  box-shadow: 0 0 0 4px #fac545;
+}
+.filtro-quadros div{
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 0.5rem;
+  justify-content: center;
+}
+
+.filtro-quadros input[type="radio"] {
+  clip: rect(0 0 0 0);
+  clip-path: inset(100%);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+}
+
+.filtro-quadros input[type="radio"]:checked + span {
+  box-shadow: 0 0 0 2px #cc9900;
+  background-color: #ffe898;
+  z-index: 1;
+  color: #ad8301;
+}
+
+label span{
+  display: block;
+  cursor: pointer;
+  background-color: #f5f5f5;
+  padding: 0.375em .75em;
+  position: relative;
+  margin-left: .0625em;
+  box-shadow: 0 0 0 0.0625em #b5bfd9;
+  letter-spacing: .05em;
+  color: #3e4963;
+  text-align: center;
+  transition: background-color .5s ease;
+}
+label:first-child span {
+  border-radius: .375em 0 0 .375em;
+}
+label:last-child span {
+  border-radius: 0 .375em .375em 0;
+}
+
+
 
 .obras-andamento h1 {
   font-size: 2.5rem;
@@ -352,7 +387,7 @@ footer {
   font-weight: 500;
   align-items: center;
   gap: 0.25rem;
-  background-color: #2563eb;
+  background-color: #cc9900;
   padding: 4px 8px;
   border-radius: 4px;
 }
