Finalização da pagina obras.html

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -89,6 +89,9 @@
       background-color: white;
       color: #ff9900;
     }
+    footer{
+      margin-top: 0px;
+    }
   </style>
 </head>
 <body>
