--- a/public/style.css
+++ b/public/style.css
@@ -466,7 +466,8 @@ label:last-child span {
   }
   & > #description-obras> #tag-obras{
     display: flex;
-    flex-direction: row;
+    flex-direction: inherit;
+    flex-wrap: wrap;
     justify-content: space-between;
     width: 60%;
     margin: auto;
@@ -476,7 +477,9 @@ label:last-child span {
     flex-direction: row;
     border: solid .1rem #cc9900;
     padding: .4rem .6rem .4rem .6rem;
-    border-radius: 99.9rem;    
+    border-radius: 99.9rem;
+    margin: auto;
+    margin-bottom: .4rem;    
   }
 & > #description-obras> #span-description-obras{
   margin: auto;
@@ -700,6 +703,7 @@ footer {
   position: relative; /* melhor que absolute para responsividade */
   bottom: 0;
   left: 0;
+  margin-top: 10rem;
 }
 
 .footer-section {
