Continuando tela saiba-mais.html

--- a/public/views/saiba-mais.html
+++ b/public/views/saiba-mais.html
@@ -24,7 +24,41 @@
 </header>
 
 <main>
+  <div class="page-title">
 
+    <h1 class="main-page-title">
+      Conheça mais sobre o Grupo Eletroge
+    </h1>
+
+    <p class="p-description-page">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia, molestiae voluptatem. Excepturi illo soluta temporibus provident sed, pariatur possimus sunt corporis ratione, quidem reiciendis! Sequi enim et aperiam ab voluptatibus.
+    </p>
+  </div>
+  <hr width="60%">
+
+  <div class="obras-infos">
+    <p class="p-obras-infos">
+      Com mais de 50 obras feitas em todo o Brasil! E com 16 anos de historia
+    </p>
+    <button class="btn-obras-info">Conheça as nossas obras</button>
+  </div>
+
+  <div class="description-co">
+    <div class="img-cos">
+      <div class="detail-img-cos">
+        <img src="../img/img-perfil-teste.png" alt="Imagem Anderson C. Lopes">
+        <p class="p-detail-cos">Texto falando um pouco sobre cada um, com nome e idade</p>
+      </div>
+
+      <div class="detail-img-cos">
+      
+        <img src="../img/img-perfil-teste.png" alt="Imagem Oliveira">
+        <p class="p-detail-cos">Texto falando um pouco sobre cada um, com nome e idade</p>
+      
+      </div>
+      
+    </div>
+  </div>
 </main>
 
 <!--Rodapé-->
