--- a/public/style.css
+++ b/public/style.css
@@ -60,11 +60,7 @@ nav a:hover {
   display: block;
 }
 
-.hero button,
-.botao-banner {
-  position: absolute;
-  bottom: 20px;
-  left: 20px;
+button {
   background-color: transparent;
   color: white;
   border: 2px solid white;
@@ -74,8 +70,7 @@ nav a:hover {
   transition: background-color 0.3s, color 0.3s;
 }
 
-.hero button:hover,
-.botao-banner:hover {
+button:hover {
   background-color: white;
   color: #cc9900;
 }
@@ -374,8 +369,8 @@ label:last-child span {
     font-size: 2.4rem;
     padding: 1.5rem 0 1.5rem 0;
   }
-  & > section > hr{
-  width: 100%;
+
+}hr{
   margin: auto;
   margin-bottom: .8rem;
   justify-content: center;
@@ -384,7 +379,6 @@ label:last-child span {
   background-color: #474747; /* Cinza escuro ou preto */
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3); /* Sombra suave */
   }
-}
 #content-obras{
   display: flex;
   justify-content: space-between;
@@ -751,3 +745,37 @@ img {
   max-width: 100%;
   height: auto;
 } 
+
+/*CSS saiba-mais.html*/
+
+.page-title{
+  text-align: center;
+  margin: auto;
+  margin-top: 4rem;
+  margin-bottom: 2rem;
+  width: 60%;
+  & > h1{
+    font-size: 40px;
+    text-shadow: ;
+    margin-bottom: 1rem;
+  }
+  & > p {
+    width: 80%;
+    margin: auto;
+    font-size: 20px;
+  }
+}
+.obras-infos{
+  width: 100%;
+  height: 20rem;
+  background-color: rgb(173, 131, 1, 0.3);
+  margin: auto;
+  margin-top: auto;
+  margin-bottom: auto;
+  align-items: center;
+  text-align: center;
+  & > p{
+    font-size: 20px;
+    color: #fff;
+  }
+}
