--- a/public/style.css
+++ b/public/style.css
@@ -246,11 +246,23 @@ label:last-child span {
   border-radius: 0 .375em .375em 0;
 }
 
-
+.obras-andamento{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 100%;
+  height: 100%;
+  align-items: center;
+  margin: auto;
+}
 
 .obras-andamento h1 {
-  font-size: 2.5rem;
-  margin-bottom: 20px;
+  font-size: 3.2rem;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  & > .botao-andamento{
+    width: 50rem;
+  }
 }
 
 .obras-andamento p {
@@ -258,6 +270,8 @@ label:last-child span {
   margin: 0 auto 30px;
   font-size: 1.1rem;
   line-height: 1.6;
+  text-align: center;
+  font-size: 1.6rem;
 }
 
 .botao-andamento {
