Remoção de algumas linhas

--- a/public/views/saiba-mais.html
+++ b/public/views/saiba-mais.html
@@ -1,83 +1,91 @@
-    <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt-BR">
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../style.css" />
     <link
-          rel="stylesheet"
-          href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-  />
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
     <title>Saiba Mais - EletroGe</title>
-</head>
-<body>
-<!--Cabeçalho-->
-<header>
-  <a href="index.html">
-    <img src="../img/logo-eletroge.png" alt="Logo EletroGe" class="logo" />
-  </a>
-  <nav>
-    <a href="index.html"><i class="fas fa-home"></i> Início</a>
-    <a href="servicos-eletroge.html"><i class="fas fa-tools"></i> Serviços</a>
-    <a href="#"><i class="fas fa-envelope"></i> Contato</a>
-  </nav>
-</header>
+  </head>
+  <body>
+    <!--Cabeçalho-->
+    <header>
+      <a href="index.html">
+        <img src="../img/logo-eletroge.png" alt="Logo EletroGe" class="logo" />
+      </a>
+      <nav>
+        <a href="index.html"><i class="fas fa-home"></i> Início</a>
+        <a href="servicos-eletroge.html"
+          ><i class="fas fa-tools"></i> Serviços</a
+        >
+        <a href="#"><i class="fas fa-envelope"></i> Contato</a>
+      </nav>
+    </header>
 
-<main>
-  <div class="page-title">
+    <main>
+      <div class="page-title">
+        <h1 class="main-page-title">Conheça mais sobre o Grupo Eletroge</h1>
 
-    <h1 class="main-page-title">
-      Conheça mais sobre o Grupo Eletroge
-    </h1>
+        <p class="p-description-page">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia,
+          molestiae voluptatem. Excepturi illo soluta temporibus provident sed,
+          pariatur possimus sunt corporis ratione, quidem reiciendis! Sequi enim
+          et aperiam ab voluptatibus.
+        </p>
+      </div>
+      <hr width="60%" />
 
-    <p class="p-description-page">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia, molestiae voluptatem. Excepturi illo soluta temporibus provident sed, pariatur possimus sunt corporis ratione, quidem reiciendis! Sequi enim et aperiam ab voluptatibus.
-    </p>
-  </div>
-  <hr width="60%">
-
-  <div class="obras-infos">
-    <p class="p-obras-infos">
-      Com mais de 50 obras feitas em todo o Brasil! E com 16 anos de historia
-    </p>
-    <button class="btn-obras-info">Conheça as nossas obras</button>
-  </div>
-
-  <div class="description-co">
-    <div class="img-cos">
-      <div class="detail-img-cos">
-        <img src="../img/img-perfil-teste.png" alt="Imagem Anderson C. Lopes">
-        <p class="p-detail-cos">Texto falando um pouco sobre cada um, com nome e idade</p>
+      <div class="obras-infos">
+        <p class="p-obras-infos">
+          Com mais de 50 obras feitas em todo o Brasil! E com 16 anos de
+          historia
+        </p>
+        <button class="btn-obras-info">Conheça as nossas obras</button>
       </div>
 
-      <div class="detail-img-cos">
-      
-        <img src="../img/img-perfil-teste.png" alt="Imagem Oliveira">
-        <p class="p-detail-cos">Texto falando um pouco sobre cada um, com nome e idade</p>
-      
-      </div>
-      
-    </div>
-  </div>
-</main>
+      <div class="description-co">
+        <div class="img-cos">
+          <div class="detail-img-cos">
+            <img
+              src="../img/img-perfil-teste.png"
+              alt="Imagem Anderson C. Lopes"
+            />
+            <p class="p-detail-cos">
+              Texto falando um pouco sobre cada um, com nome e idade
+            </p>
+          </div>
 
-<!--Rodapé-->
-<footer>
-    <div class="footer-section footer-yellow-light">
+          <div class="detail-img-cos">
+            <img src="../img/img-perfil-teste.png" alt="Imagem Oliveira" />
+            <p class="p-detail-cos">
+              Texto falando um pouco sobre cada um, com nome e idade
+            </p>
+          </div>
+        </div>
+      </div>
+    </main>
+
+    <!--Rodapé-->
+    <footer>
+      <div class="footer-section footer-yellow-light">
         <div>Email: contato@eletroge.com</div>
         <div>WhatsApp: (11) 91234-5678</div>
         <div>Telefone: (11) 1234-5678</div>
-    </div>
-    <div class="footer-section footer-yellow-dark">
+      </div>
+      <div class="footer-section footer-yellow-dark">
         <strong>Entre em contato conosco a qualquer momento!</strong>
-    </div>
-    <div class="footer-section footer-white">
+      </div>
+      <div class="footer-section footer-white">
         <img
-                src="../img/logo-eletroge.png"
-                alt="Logo EletroGe"
-                class="img-eletroge-rodape"
+          src="../img/logo-eletroge.png"
+          alt="Logo EletroGe"
+          class="img-eletroge-rodape"
         />
-    </div>
-</footer>
-</body>
+      </div>
+    </footer>
+  </body>
 </html>
+  
