Finalização da pagina saiba-mais.html

--- a/public/views/saiba-mais.html
+++ b/public/views/saiba-mais.html
@@ -36,14 +36,17 @@
           et aperiam ab voluptatibus.
         </p>
       </div>
-      <hr width="60%" />
 
       <div class="obras-infos">
-        <p class="p-obras-infos">
-          Com mais de 50 obras feitas em todo o Brasil! E com 16 anos de
-          historia
-        </p>
-        <button class="btn-obras-info">Conheça as nossas obras</button>
+        <div>
+          <p class="p-obras-infos">
+            <strong>
+              Com mais de 50 obras feitas em todo o Brasil!<br> E com 16 anos de
+              historia
+            </strong>
+          </p>
+          <button class="btn-obras-info">Conheça as nossas obras</button>
+        </div>
       </div>
 
       <div class="description-co">
@@ -53,13 +56,15 @@
               src="../img/img-perfil-teste.png"
               alt="Imagem Anderson C. Lopes"
             />
+            <h3>Anderson C. Lopes</h3>
             <p class="p-detail-cos">
               Texto falando um pouco sobre cada um, com nome e idade
             </p>
           </div>
-
+          
           <div class="detail-img-cos">
             <img src="../img/img-perfil-teste.png" alt="Imagem Oliveira" />
+            <h3>Oliveira Aparecido</h3>
             <p class="p-detail-cos">
               Texto falando um pouco sobre cada um, com nome e idade
             </p>
@@ -83,7 +88,7 @@
           src="../img/logo-eletroge.png"
           alt="Logo EletroGe"
           class="img-eletroge-rodape"
-        />
+        />  
       </div>
     </footer>
   </body>
