--- a/public/style.css
+++ b/public/style.css
@@ -10,7 +10,7 @@
 
 body {
   font-family: 'Arial', sans-serif;
-  background-color: #f5f5f5;
+  background-color: rgba(63, 74, 100, 0.024);
   color: #333;
   width: 100%;
   height: 100%;
@@ -765,30 +765,81 @@ img {
 .page-title{
   text-align: center;
   margin: auto;
-  margin-top: 4rem;
-  margin-bottom: 2rem;
-  width: 60%;
+  width: 100%;
+  height: 25rem;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  background-image: url(../public/img/img-principal.jpg);
+  filter: grayscale(30%);
+  color: #101010;
   & > h1{
     font-size: 40px;
-    margin-bottom: 1rem;
+    margin-top: 8rem;
+    text-shadow: 0.5px 0.5px 1px rgba(255, 255, 255, 0.3);
   }
   & > p {
-    width: 80%;
+    width: 60%;
     margin: auto;
-    font-size: 20px;
+    font-size: 1.6rem;
+    text-shadow: 0.5px 0.5px 1px rgba(255, 255, 255, 0.3);  
   }
 }
 .obras-infos{
   width: 100%;
-  height: 20rem;
-  background-color: rgb(173, 131, 1, 0.3);
+  height:15rem;
+  background-color: #f4d065;
+  color: #ffffff;
   margin: auto;
   margin-top: auto;
   margin-bottom: auto;
   align-items: center;
   text-align: center;
-  & > p{
-    font-size: 20px;
-    color: #fff;
+  & > div{
+    display: flex;
+    align-items: center;
+    font-size: 1.6rem;
+    width: 100%;
+    height: 100%;
+    margin: auto;
+    justify-content: center;
+    flex-direction: column;
+    & > p{
+      margin-bottom: 1rem;
+    }
+    & > button{
+      border-radius: .5rem;
+      font-size: 1.2rem;
+      &:hover{
+        color: #f4d065;
+      }
+    }
+  }
+}
+
+.description-co{
+  width: 100%;
+  height: 30rem;
+  & > .img-cos{
+    display: flex;
+    flex-direction: row;
+    width: 70%;
+    height: 100%;
+    justify-content: space-between;
+    margin: auto;
+    & > .detail-img-cos{
+      display: grid;
+      place-items: center;
+      width: 40%;
+      margin: auto;
+      text-align: center;
+      & > img{
+        border-radius: 50%;
+        border: solid .1rem #000;
+        width: 20rem;
+
+      }
+    }
   }
 }
